--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="common_settings">Settings</string>
     <string name="common_allow">Allow</string>
     <string name="common_cancel">Cancel</string>
+    <string name="common_confirm">Confirm</string>
     <string name="common_enable">Enable</string>
     <string name="common_disable">Disable</string>
     <string name="common_done">Done</string>
@@ -316,4 +317,11 @@
     <string name="notification_install_channel_desc">Notifications for app installations</string>
     <string name="notification_network_speed_channel">Network Speed Monitor</string>
     <string name="notification_network_speed_channel_desc">Shows real-time network speed</string>
+
+    <!-- Backup Selection Dialog -->
+    <string name="backup_selection_description">Select what to include in the backup</string>
+    <string name="backup_option_settings">Settings</string>
+    <string name="backup_option_domains">Custom Domains</string>
+    <string name="backup_option_blocklists">Blocklists</string>
+    <string name="backup_option_applications">App Rules</string>
 </resources>
