--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -33,6 +33,7 @@
     <string name="about_source_code">Código Fonte</string>
     <string name="about_email">E-mail</string>
     <string name="about_discord">Discord</string>
+    <string name="about_instagram">Instagram - Suporte mais rápido</string>
     <string name="about_rate_app">Avalie o App</string>
     <string name="language_description">Escolha a língua</string>
     <string name="logs_search_packets">Filtros (app, ip, domínios)</string>
